k8s/mcl/apps/oekaki-dengon-game/_configs/back__networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: oekaki-dengon-game-back
    app.kubernetes.io/name: oekaki-dengon-game-back
  name: oekaki-dengon-game-back
  namespace: oekaki-dengon-game
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
              - 10.244.0.0/16
              - 10.96.0.0/12
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/name: default-collector
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
          podSelector:
            matchLabels:
              cnpg.io/cluster: postgresql-default
  podSelector:
    matchLabels:
      app: oekaki-dengon-game-back
      app.kubernetes.io/name: oekaki-dengon-game-back
  policyTypes:
    - Egress
